--- a/apps/gateway/package.json
+++ b/apps/gateway/package.json
@@ -15,7 +15,13 @@
     "clean": "bun -e \"import { rmSync } from 'node:fs'; for (const p of ['dist','node_modules','.turbo','coverage','.tsbuildinfo']) rmSync(p,{recursive:true,force:true});\""
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^2.0.0",
+    "@effect/platform": "latest",
+    "@effect/platform-bun": "latest",
+    "@effect/rpc": "latest",
     "@openassistant/core": "workspace:*",
-    "effect": "latest"
+    "ai": "^6.0.73",
+    "effect": "latest",
+    "zod": "^4.3.6"
   }
 }
