--- a/apps/discord-bot/package.json
+++ b/apps/discord-bot/package.json
@@ -16,6 +16,7 @@
     "@effect/platform": "latest",
     "@effect/rpc": "latest",
     "@openassistant/core": "workspace:*",
+    "@openassistant/gateway": "workspace:*",
     "@openassistant/reacord": "workspace:*",
     "ai": "^6.0.73",
     "discord.js": "^14.17.3",
