--- a/package.json
+++ b/package.json
@@ -43,5 +43,10 @@
     "react": "^19.0.0",
     "react-reconciler": "^0.31.0",
     "zod": "^4.3.6"
+  },
+  "dependencies": {
+    "@apidevtools/swagger-parser": "^12.1.0",
+    "@modelcontextprotocol/sdk": "^1.26.0",
+    "yaml": "^2.8.2"
   }
 }
