--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "files": [],
   "references": [
-    {
-      "path": "./packages/core"
-    }
+    { "path": "./packages/core" },
+    { "path": "./packages/tool-gen" },
+    { "path": "./apps/server" }
   ]
 }
