Shift executor to worker-driven Convex flow
Move execution to a dedicated worker and switch the web UI to Convex reactive queries so task, approval, and tool state update without polling or SSE.

--- a/executor/apps/server/package.json
+++ b/executor/apps/server/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "dev": "bun --hot src/index.ts",
+    "worker": "bun --hot src/worker.ts",
     "start": "bun src/index.ts",
     "test": "bun test",
     "typecheck": "bunx tsc --noEmit"
