Add assistant agent, server, Discord bot, and dev orchestrator
Introduces the assistant side of the system:
- @assistant/core: agent loop (Claude via pi-ai) with run_code tool calling
- @assistant/server: Elysia API with SSE task streaming and Eden Treaty client
- @assistant/bot: Discord bot (Reacord) with /ask command, live approval buttons via Convex reactivity
- Executor sync endpoint (POST /api/tasks/run) for blocking code execution
- dev.ts multi-service orchestrator (bun dev starts everything)
- Root workspace config for cross-package resolution

--- a/assistant/package.json
+++ b/assistant/package.json
@@ -3,10 +3,13 @@
   "private": true,
   "type": "module",
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "legacy/openassistant/packages/reacord"
   ],
   "scripts": {
-    "test": "bun test packages/"
+    "test": "bun test packages/core/src/ packages/agent-executor-adapter/src/",
+    "dev:server": "bun run --filter @assistant/server dev",
+    "dev:bot": "bun run --filter @assistant/bot dev"
   },
   "devDependencies": {
     "@types/bun": "latest",
