Add TypeScript typechecking for LLM-generated code before execution
Use openapi-typescript for high-fidelity JSON Schema → TypeScript conversion
in tool type signatures. Typecheck code against tool declarations using the
TS compiler API before creating tasks, so type errors are caught early and
returned to the agent without executing. Includes 24 tests for the typechecker.

--- a/executor/apps/server/package.json
+++ b/executor/apps/server/package.json
@@ -9,6 +9,7 @@
     "@vercel/sandbox": "latest",
     "convex": "latest",
     "elysia": "^1.4.22",
+    "openapi-typescript": "^7.10.1",
     "zod": "^4.3.6"
   },
   "scripts": {
@@ -21,6 +22,6 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "typescript": "latest"
+    "typescript": "^5.9.3"
   }
 }
