Consolidate to single monorepo lockfile and add web UI to dev runner
Remove nested workspace declarations and lockfiles from executor/ and
assistant/ — the root package.json already defines all workspace paths.
Fixes Turbopack CSS resolution failures (tailwindcss, shadcn) caused by
enhanced-resolve walking up to the wrong node_modules boundary.

Also adds executor web UI (port 3002) to the dev runner and restores
the missing CONVEX_DEPLOYMENT in executor/.env.local.

--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "private": true,
   "type": "module",
   "workspaces": [
+    "executor",
     "executor/apps/*",
     "executor/packages/*",
+    "assistant",
     "assistant/packages/*",
     "assistant/legacy/openassistant/packages/reacord"
   ],
