Update .gitignore and enhance dev.ts for Convex local backend integration
- Added entries to .gitignore for Convex local backend state files and generated push environment file.
- Modified dev.ts to include a new service for Convex function watcher and improved backend management functions, including starting the backend and pushing functions with appropriate configurations.
- Refactored service spawning and output handling for better clarity and maintainability.

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,10 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 
 # Finder (MacOS) folder config
 .DS_Store
+
+# Convex local backend state
+convex_local_backend.sqlite3
+convex_local_storage/
+
+# Generated push env file
+executor/.env.executor-push
