Extract reacord from legacy, delete legacy directory and unused adapter package
- Move @openassistant/reacord to assistant/packages/reacord/ (only actively used legacy package)
- Delete entire assistant/legacy/openassistant/ directory (~515MB of superseded code)
- Delete unused assistant/packages/agent-executor-adapter/ (9-line wrapper never imported)
- Update workspace entries in root and assistant package.json

--- a/assistant/package.json
+++ b/assistant/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "test": "bun test packages/core/src/ packages/agent-executor-adapter/src/",
+    "test": "bun test packages/core/src/",
     "dev:server": "bun run --filter @assistant/server dev",
     "dev:bot": "bun run --filter @assistant/bot dev"
   },
