Add @executor/contracts shared types package, eliminate type duplication
- Create executor/packages/contracts/ with all shared type definitions
- Server and web now import from @executor/contracts instead of maintaining copies
- Fixes type drift (e.g. TaskEventRecord.eventName was narrower in web)
- Remove empty package stubs (confect/, convex/, database/)
- Pin convex versions consistently, remove unused deps (@elysiajs/eden, esbuild)

--- a/executor/package.json
+++ b/executor/package.json
@@ -2,6 +2,10 @@
   "name": "executor-monorepo",
   "private": true,
   "type": "module",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
     "dev": "bun run --cwd apps/server dev",
     "dev:worker": "bun run --cwd apps/server worker",
@@ -14,12 +18,11 @@
     "typecheck": "bunx tsc --noEmit -p tsconfig.json"
   },
   "dependencies": {
-    "convex": "latest"
+    "convex": "^1.31.7"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "convex-test": "^0.0.41",
-    "esbuild": "^0.27.3",
     "typescript": "latest"
   }
 }
