Replace raw fetch() with typed Eden Treaty client in cli.test.ts and web UI
- cli.test.ts: bootstrap, health, approvals, tasks all use Eden now
- tasks-view.tsx: task creation uses typed executor.api.tasks.post()
- Add executor-client.ts to web app with Eden Treaty<App> client
- Add @elysiajs/eden to web deps and @executor/server/* tsconfig path

--- a/executor/apps/server/package.json
+++ b/executor/apps/server/package.json
@@ -21,6 +21,7 @@
     "typecheck": "bunx tsc --noEmit"
   },
   "devDependencies": {
+    "@elysiajs/eden": "^1.4.6",
     "@types/bun": "latest",
     "typescript": "^5.9.3"
   }
