--- a/executor/apps/web/package.json
+++ b/executor/apps/web/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@elysiajs/eden": "^1.4.6",
+    "@tanstack/react-query": "^5.80.7",
     "@executor/contracts": "workspace:*",
     "@monaco-editor/react": "^4.7.0",
     "class-variance-authority": "^0.7.1",
