--- a/executor/package.json
+++ b/executor/package.json
@@ -18,6 +18,7 @@
     "typecheck": "bunx tsc --noEmit -p tsconfig.json"
   },
   "dependencies": {
+    "@convex-dev/action-cache": "^0.3.0",
     "@convex-dev/stripe": "^0.1.3",
     "@convex-dev/workos-authkit": "^0.1.6",
     "@workos-inc/node": "^8.2.0",
