Add MCP OAuth support and enhance OpenAPI handling
- Introduced MCP OAuth bearer-token verification with new routes for protected resources and authorization server proxying.
- Added `jose` library for JWT handling.
- Enhanced OpenAPI spec caching and introduced logic for handling oversized specs.
- Updated README with new MCP OAuth configuration notes and improved tools view with MCP setup tab.
- Improved type generation and error handling in typechecker for better resilience.

--- a/executor/package.json
+++ b/executor/package.json
@@ -23,7 +23,8 @@
     "@convex-dev/workos-authkit": "^0.1.6",
     "@workos-inc/node": "^8.2.0",
     "convex": "^1.31.7",
-    "convex-helpers": "^0.1.111"
+    "convex-helpers": "^0.1.111",
+    "jose": "^6.1.0"
   },
   "devDependencies": {
     "@modelcontextprotocol/sdk": "^1.26.0",
