Update Vercel configuration and Next.js settings
- Adjusted vercel.json to set the build command and maintain the framework specification for Next.js.
- Enhanced next.config.ts to define the turbopack root using the workspace directory, ensuring proper resolution of workspace packages.

--- a/executor/vercel.json
+++ b/executor/vercel.json
@@ -1,7 +1,6 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "bun run --cwd apps/web build",
-  "outputDirectory": "apps/web/.next",
+  "framework": "nextjs",
   "installCommand": "bun install",
-  "framework": "nextjs"
+  "buildCommand": "bun run --cwd apps/web build"
 }
