--- a/executor/package.json
+++ b/executor/package.json
@@ -2,6 +2,9 @@
   "name": "executor",
   "private": true,
   "type": "module",
+  "scripts": {
+    "deploy": "bunx convex deploy"
+  },
   "dependencies": {
     "convex": "^1.31.7"
   }
