Fix WorkOS auth flashing between guest and signed-in state
Replace ConvexProviderWithAuthKit with ConvexProviderWithAuth using a
stable memoized auth hook to prevent the auth token from being cleared
and re-set on every render cycle. Expose WorkOS auth loading state via
context so SessionProvider waits for the full auth chain to resolve
before falling back to guest mode.

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ CONVEX_SITE_URL=https://your-deployment.convex.site
 # ── WorkOS (optional — enables auth, omit for guest-only mode) ──
 # WORKOS_CLIENT_ID=client_...
 # WORKOS_API_KEY=sk_test_...
+# WORKOS_COOKIE_PASSWORD=<32+ char random string, e.g. openssl rand -base64 32>
 # WORKOS_WEBHOOK_SECRET=...
 
 # ── Discord bot (optional — omit to skip bot startup) ──
