Fix TS2589 typecheck errors by moving lib/ out of convex/ and adding postcodegen script
Convex's generated ApiFromModules/FilterApi types exceed TypeScript's
instantiation depth limit of 100 with 18 modules and 105+ function exports,
causing 315 TS2589 errors across all convex/ files.

Fix:
- Move executor/convex/lib/ → executor/lib/ to remove non-function utility
  modules from Convex codegen (reduces module count from 35 to 18)
- Add scripts/postcodegen.ts that rewrites _generated/api.d.ts to replace
  the recursive ApiFromModules/FilterApi types with explicit per-module
  FunctionReference declarations
- Update all convex/ imports to reference ../lib/ paths
- Add 'codegen' and 'fix-types' scripts to package.json

Run 'bun run codegen' after convex codegen to fix types automatically.

--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
     "@modelcontextprotocol/sdk": "^1.26.0",
     "@types/bun": "latest",
     "convex-test": "^0.0.41",
-    "typescript": "latest"
+    "typescript": "^5.9.3"
   }
 }
