--- a/executor/package.json
+++ b/executor/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "deploy": "bunx convex deploy"
+    "deploy": "bunx convex deploy",
+    "codegen": "bunx convex codegen && bun scripts/postcodegen.ts",
+    "fix-types": "bun scripts/postcodegen.ts"
   },
   "dependencies": {
     "convex": "^1.31.7"
