--- a/executor/apps/web/package.json
+++ b/executor/apps/web/package.json
@@ -16,7 +16,7 @@
     "@monaco-editor/react": "^4.7.0",
     "@streamdown/code": "^1.0.1",
     "@tanstack/react-query": "^5.80.7",
-
+    "@tanstack/react-virtual": "^3.13.18",
     "@workos-inc/authkit-nextjs": "^2.13.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
