Improve billing workflow and OpenAPI type fidelity
Enable Stripe checkout and portal flows in the billing UI, and harden OpenAPI type extraction plus cache invalidation so tool hints remain accurate on real-world specs.

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,14 @@ CONVEX_SITE_URL=https://your-deployment.convex.site
 # WORKOS_COOKIE_PASSWORD=<32+ char random string, e.g. openssl rand -base64 32>
 # WORKOS_WEBHOOK_SECRET=...
 
+# ── Stripe Billing (optional — required for checkout/portal) ──
+# STRIPE_SECRET_KEY=sk_test_...
+# STRIPE_WEBHOOK_SECRET=whsec_...
+# STRIPE_PRICE_ID=price_...
+# BILLING_SUCCESS_URL=http://localhost:3000/organization?tab=billing&success=true
+# BILLING_CANCEL_URL=http://localhost:3000/organization?tab=billing&canceled=true
+# BILLING_RETURN_URL=http://localhost:3000/organization?tab=billing
+
 # ── Discord bot (optional — omit to skip bot startup) ──
 # DISCORD_BOT_TOKEN=...
 
