--- a/executor/apps/web/package.json
+++ b/executor/apps/web/package.json
@@ -28,6 +28,7 @@
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-router": "^7.9.5",
     "shiki": "^3.22.0",
     "sonner": "^2.0.7",
     "streamdown": "^2.1.0",
