--- a/executor/apps/web/package.json
+++ b/executor/apps/web/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@convex-dev/workos": "^0.0.1",
+    "@executor/convex": "workspace:*",
     "@elysiajs/eden": "^1.4.6",
-    "@executor/contracts": "workspace:*",
     "@monaco-editor/react": "^4.7.0",
     "@streamdown/code": "^1.0.1",
     "@tanstack/react-query": "^5.80.7",
