--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "type": "module",
   "workspaces": [
+    "executor/convex",
     "executor/apps/*",
     "executor/packages/*",
     "assistant",
@@ -32,7 +33,6 @@
     "@convex-dev/migrations": "^0.3.1",
     "@convex-dev/stripe": "^0.1.3",
     "@convex-dev/workos-authkit": "^0.1.6",
-    "@executor/contracts": "workspace:*",
     "@workos-inc/node": "^8.2.0",
     "convex": "^1.31.7",
     "convex-helpers": "^0.1.111",
