Add menubar app support and update related configurations
- Introduced a new Electron-based menubar application for pending task approvals in the executor.
- Updated `package.json` and `assistant/package.json` to include development scripts for the menubar app.
- Enhanced the README to document the new menubar app and its purpose.
- Removed legacy web directory references from the uninstall script to streamline the uninstallation process.

--- a/assistant/package.json
+++ b/assistant/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "bun test packages/core/src/",
     "dev:server": "bun run --filter @assistant/server dev",
-    "dev:bot": "bun run --filter @assistant/bot dev"
+    "dev:bot": "bun run --filter @assistant/bot dev",
+    "dev:executor:menubar": "bun run --cwd ../executor/apps/menubar dev"
   },
   "devDependencies": {
     "@types/bun": "latest",
