--- a/executor/package.json
+++ b/executor/package.json
@@ -14,6 +14,7 @@
     "build:release": "bun run scripts/build-release.ts"
   },
   "dependencies": {
+    "better-result": "^2.7.0",
     "convex": "^1.31.7",
     "graphql": "^16.12.0"
   }
