Refactor sandbox host worker to use better-result
Replace try/catch patterns in the CF host worker with Result types:
- ToolBridge.callTool uses Result.tryPromise for fetch + response handling
- ToolBridge.emitOutput uses Result.tryPromise (best-effort, discard err)
- Request body parsing uses Result.tryPromise instead of try/catch
- Isolate execution uses nested Result.tryPromise, eliminates try/finally

--- a/executor/packages/sandbox-host/package.json
+++ b/executor/packages/sandbox-host/package.json
@@ -12,5 +12,8 @@
     "@cloudflare/workers-types": "^4.20250214.0",
     "typescript": "^5.9.3",
     "wrangler": "^4.0.0"
+  },
+  "dependencies": {
+    "better-result": "^2.7.0"
   }
 }
