Implement tool call management and approval workflow
- Introduce new database schema for tool calls, including status tracking and approval handling.
- Add mutations for creating, updating, and retrieving tool calls, with support for pending approvals.
- Enhance the executor to manage tool call lifecycle, including status updates and error handling.
- Update internal API to support new tool call functionalities, ensuring proper event publishing for task states.
- Refactor existing code to integrate new tool call logic, improving overall execution flow and error management.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "executor/convex",
     "executor/apps/*",
     "executor/packages/*",
+    "sources",
     "assistant",
     "assistant/packages/*",
     "assistant/packages/reacord"
@@ -14,6 +15,8 @@
     "with-env": "bun run --env-file=.env --",
     "dev": "bun run dev.ts",
     "kill:all": "bun run kill-all.ts",
+    "dev:sources": "bun run --cwd sources dev",
+    "sources:sync": "bun run --cwd sources sync",
     "dev:executor:convex": "bunx --cwd executor convex dev",
     "dev:executor:web": "bun run --cwd executor/apps/web dev",
     "dev:executor:all": "bun run dev:executor:convex & bun run dev:executor:web",
