--- a/executor/packages/sandbox-host/package.json
+++ b/executor/packages/sandbox-host/package.json
@@ -14,6 +14,7 @@
     "wrangler": "^4.0.0"
   },
   "dependencies": {
-    "better-result": "^2.7.0"
+    "better-result": "^2.7.0",
+    "convex": "^1.31.7"
   }
 }
