Refactor executor services and add anonymous MCP OAuth fallback
Split Convex executor/http logic into focused modules and carry source auth metadata through tool discovery and runtime paths. Add self-issued OAuth routes so MCP auth can run without an external authorization server.

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,10 @@ CONVEX_SITE_URL=https://your-deployment.convex.site
 # EXECUTOR_BACKEND_SITE_PORT=5411
 # EXECUTOR_WEB_PORT=5312
 
+# ── MCP OAuth (optional) ──
+# Set to 1 to enable self-issued anonymous OAuth even without WorkOS auth.
+# MCP_ENABLE_ANONYMOUS_OAUTH=1
+
 # ── Discord bot (optional — omit to skip bot startup) ──
 # DISCORD_BOT_TOKEN=...
 
