--- a/executor/package.json
+++ b/executor/package.json
@@ -1,6 +1,7 @@
 {
   "name": "executor",
   "dependencies": {
+    "@vercel/sandbox": "^1.5.0",
     "better-result": "^2.7.0",
     "convex": "^1.31.7",
     "graphql": "^16.12.0"
@@ -26,6 +27,7 @@
     "deploy": "bunx convex deploy",
     "codegen": "bunx convex codegen",
     "test:e2e:install": "bun test scripts/e2e/install.e2e.test.ts",
+    "test:e2e:install:sandbox": "bun test scripts/e2e/install.sandbox.e2e.test.ts",
     "build:binary": "bun build executor.ts --compile --outfile dist/executor",
     "build:release": "bun run scripts/release/build-release.ts"
   },
