--- a/executor/package.json
+++ b/executor/package.json
@@ -28,6 +28,7 @@
     "codegen": "bunx convex codegen",
     "test:e2e:install": "bun test scripts/e2e/install.e2e.test.ts",
     "test:e2e:install:sandbox": "bun test scripts/e2e/install.sandbox.e2e.test.ts",
+    "sandbox:install:session": "bun run scripts/e2e/install.sandbox.session.ts",
     "build:binary": "bun build executor.ts --compile --outfile dist/executor",
     "build:release": "bun run scripts/release/build-release.ts"
   },
