Refactor typecheck scripts and enhance OAuth handling across executor and assistant packages. This includes consolidating typecheck commands, updating script paths, and implementing timeout mechanisms for OAuth requests to improve reliability and performance.

--- a/assistant/package.json
+++ b/assistant/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "test": "bun test packages/core/src/",
     "dev:server": "bun run --filter @assistant/server dev",
-    "dev:bot": "bun run --filter @assistant/bot dev"
+    "dev:bot": "bun run --filter @assistant/bot dev",
+    "typecheck": "bun run --cwd packages/server typecheck && bun run --cwd packages/bot typecheck && bun run --cwd packages/core typecheck && bun run --cwd packages/reacord typecheck",
+    "typecheck:slow": "bun run --cwd packages/server typecheck:slow && bun run --cwd packages/bot typecheck:slow && bun run --cwd packages/core typecheck:slow && bun run --cwd packages/reacord typecheck:slow"
   },
   "devDependencies": {
     "@types/bun": "latest",
