--- a/assistant/package.json
+++ b/assistant/package.json
@@ -7,7 +7,8 @@
     "dev:server": "bun run --filter @assistant/server dev",
     "dev:bot": "bun run --filter @assistant/bot dev",
     "typecheck": "bun run --cwd packages/server typecheck && bun run --cwd packages/bot typecheck && bun run --cwd packages/core typecheck && bun run --cwd packages/reacord typecheck",
-    "typecheck:slow": "bun run --cwd packages/server typecheck:slow && bun run --cwd packages/bot typecheck:slow && bun run --cwd packages/core typecheck:slow && bun run --cwd packages/reacord typecheck:slow"
+    "typecheck:slow": "bun run --cwd packages/server typecheck:slow && bun run --cwd packages/bot typecheck:slow && bun run --cwd packages/core typecheck:slow && bun run --cwd packages/reacord typecheck:slow",
+    "clean": "rm -rf node_modules .turbo"
   },
   "devDependencies": {
     "@types/bun": "latest",
