--- a/assistant/packages/bot/package.json
+++ b/assistant/packages/bot/package.json
@@ -7,7 +7,8 @@
     "dev": "bun with-env bun --hot src/index.ts",
     "start": "bun with-env bun src/index.ts",
     "typecheck": "bunx --package @typescript/native-preview tsgo --noEmit -p tsconfig.json",
-    "typecheck:slow": "bunx tsc --noEmit -p tsconfig.json"
+    "typecheck:slow": "bunx tsc --noEmit -p tsconfig.json",
+    "clean": "rm -rf node_modules .turbo"
   },
   "dependencies": {
     "@assistant/server": "workspace:*",
