--- a/assistant/packages/core/package.json
+++ b/assistant/packages/core/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "typecheck": "bunx --package @typescript/native-preview tsgo --noEmit -p tsconfig.json",
-    "typecheck:slow": "bunx tsc --noEmit -p tsconfig.json"
+    "typecheck:slow": "bunx tsc --noEmit -p tsconfig.json",
+    "clean": "rm -rf node_modules .turbo"
   },
   "dependencies": {
     "@mariozechner/pi-ai": "^0.52.6",
