--- a/executor/apps/menubar/package.json
+++ b/executor/apps/menubar/package.json
@@ -6,6 +6,7 @@
     "dev": "bunx electron ./src/main.js",
     "start": "bunx electron ./src/main.js",
     "typecheck": "bunx --package @typescript/native-preview tsgo --noEmit -p tsconfig.json",
-    "typecheck:slow": "bunx tsc --noEmit -p tsconfig.json"
+    "typecheck:slow": "bunx tsc --noEmit -p tsconfig.json",
+    "clean": "rm -rf node_modules .turbo"
   }
 }
