--- a/executor/packages/core/package.json
+++ b/executor/packages/core/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "typecheck": "bunx --package @typescript/native-preview tsgo --noEmit",
-    "typecheck:slow": "bunx tsc --noEmit"
+    "typecheck:slow": "bunx tsc --noEmit",
+    "clean": "rm -rf node_modules .turbo"
   },
   "dependencies": {
     "better-result": "^2.7.0",
