--- a/executor/packages/runner-node/package.json
+++ b/executor/packages/runner-node/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "typecheck": "bunx --package @typescript/native-preview tsgo --noEmit",
-    "typecheck:slow": "bunx tsc --noEmit"
+    "typecheck:slow": "bunx tsc --noEmit",
+    "clean": "rm -rf node_modules .turbo"
   },
   "devDependencies": {
     "typescript": "^5.9.3"
