--- a/sources/package.json
+++ b/sources/package.json
@@ -7,7 +7,8 @@
     "start": "bun server.ts",
     "sync": "bun server.ts --sync-only",
     "typecheck": "bunx --package @typescript/native-preview tsgo --noEmit -p tsconfig.json",
-    "typecheck:slow": "bunx tsc --noEmit -p tsconfig.json"
+    "typecheck:slow": "bunx tsc --noEmit -p tsconfig.json",
+    "clean": "rm -rf node_modules .turbo"
   },
   "dependencies": {},
   "devDependencies": {
