--- a/executor/apps/web/package.json
+++ b/executor/apps/web/package.json
@@ -13,8 +13,8 @@
     "clean": "rm -rf node_modules .next .turbo"
   },
   "dependencies": {
-    "@executor/database": "workspace:*",
     "@executor/core": "workspace:*",
+    "@executor/database": "workspace:*",
     "@executor/ui": "workspace:*",
     "@monaco-editor/react": "^4.7.0",
     "@streamdown/code": "^1.0.1",
@@ -32,6 +32,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
+    "react-infinite-scroll-component": "^6.1.1",
     "react-router": "^7.9.5",
     "shiki": "^3.22.0",
     "sonner": "^2.0.7",
