--- a/executor/apps/web/package.json
+++ b/executor/apps/web/package.json
@@ -6,7 +6,7 @@
     "with-env": "bun run --env-file=../../../.env --",
     "dev": "bun with-env vite dev --port 4312",
     "build": "bun with-env vite build",
-    "start": "bun with-env env PORT=5312 HOSTNAME=127.0.0.1 node .output/server/index.mjs",
+    "start": "bun with-env env PORT=5312 HOSTNAME=127.0.0.1 node dist/server/server.mjs",
     "lint": "eslint",
     "typecheck": "bunx --package @typescript/native-preview tsgo --noEmit -p tsconfig.json",
     "typecheck:slow": "bunx tsc --noEmit -p tsconfig.json",
@@ -21,12 +21,10 @@
     "@tanstack/react-router": "^1.132.0",
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/react-virtual": "^3.13.18",
-    "@tanstack/router-plugin": "^1.132.0",
     "@workos/authkit-tanstack-react-start": "^0.5.0",
     "better-result": "^2.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1",
     "convex": "^1.31.7",
     "json-schema-traverse": "^1.0.0",
     "lucide-react": "^0.563.0",
