--- a/executor/apps/web/package.json
+++ b/executor/apps/web/package.json
@@ -54,6 +54,7 @@
     "postcss": "^8.5.6",
     "shadcn": "^3.8.4",
     "tailwindcss": "^4",
+    "nitro": "^3.0.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
     "vite": "^7.3.1",
