Enhance build process and improve component styling
- Updated the build script in `build-release.ts` to set `NODE_ENV` and `VITE_USER_NODE_ENV` to production, ensuring proper environment configuration.
- Refined the styling of various components including `approvals-view.tsx`, `dashboard/view.tsx`, `tasks-view.tsx`, and others to improve visual consistency with rounded borders and adjusted background colors.
- Enhanced the `PendingApprovalRow` and `PoliciesPanel` components for better user interaction and layout.

--- a/executor/apps/web/package.json
+++ b/executor/apps/web/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "with-env": "bun run --env-file=../../../.env --",
     "dev": "bun with-env vite dev --port 4312",
-    "build": "bun with-env vite build",
+    "build": "NODE_ENV=production bun with-env vite build --mode production",
     "start": "bun with-env env PORT=5312 HOSTNAME=127.0.0.1 node dist/server/server.mjs",
     "lint": "eslint",
     "typecheck": "bunx --package @typescript/native-preview tsgo --noEmit -p tsconfig.json",
