--- a/executor/apps/web/package.json
+++ b/executor/apps/web/package.json
@@ -36,6 +36,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "react-infinite-scroll-component": "^6.1.1",
+    "react-json-view-lite": "^2.5.0",
     "shiki": "^3.22.0",
     "sonner": "^2.0.7",
     "streamdown": "^2.1.0",
