Enhance storage access controls and improve storage instance management
- Updated `.env.example` to include a new optional variable for disabling metadata writes on read-only storage.
- Improved the `StoragePanel` component to utilize a parsed file preview for better JSON handling.
- Added comprehensive tests for storage lifecycle access controls, ensuring non-admin members cannot open, close, or delete shared workspace storage.
- Enhanced storage instance management by implementing organization admin checks for opening, closing, and deleting storage instances.
- Introduced debouncing for storage touch mutations to optimize performance during hot read updates.

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,8 @@ CONVEX_SITE_URL=https://your-deployment.convex.site
 # Hosted Convex deployments must use AGENT_STORAGE_PROVIDER=agentfs-cloudflare.
 # AGENT_STORAGE_PROVIDER=agentfs-local
 # AGENT_STORAGE_ROOT=/tmp/executor-agentfs
+# Optional: disable metadata writes for read-only storage inspector/tool reads.
+# AGENT_STORAGE_TOUCH_ON_READ=false
 # For Cloudflare Durable Objects storage proxy (served by runner-sandbox-host):
 # AGENT_STORAGE_PROVIDER=agentfs-cloudflare
 # Reuses CLOUDFLARE_SANDBOX_RUN_URL and CLOUDFLARE_SANDBOX_AUTH_TOKEN from the runtime config.
