--- a/executor/tsconfig.json
+++ b/executor/tsconfig.json
@@ -16,6 +16,18 @@
     "paths": {
       "*": [
         "./*"
+      ],
+      "convex": [
+        "../node_modules/convex"
+      ],
+      "convex/*": [
+        "../node_modules/convex/*"
+      ],
+      "convex-helpers": [
+        "../node_modules/convex-helpers"
+      ],
+      "convex-helpers/*": [
+        "../node_modules/convex-helpers/*"
       ]
     }
   },
