Enforce managed credential providers in cloud mode

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,11 @@ CONVEX_URL=https://your-deployment.convex.cloud
 CONVEX_SITE_URL=https://your-deployment.convex.site
 
 # ── Runtime execution mode (set in Convex prod) ──
+# Deployment mode controls security defaults in backend logic.
+# - cloud: enforce managed credential storage and other cloud-safe defaults
+# - self-hosted: allow local storage primitives for single-host deployments
+# - unset: default to self-hosted (set cloud/prod explicitly in hosted deploys)
+# EXECUTOR_DEPLOYMENT_MODE=cloud
 # When enabled, local Bun execution is allowed.
 # Leave unset in production to default to Cloudflare runtime.
 # DANGEROUSLY_ALLOW_LOCAL_VM=1
@@ -39,6 +44,8 @@ CONVEX_SITE_URL=https://your-deployment.convex.site
 # ANONYMOUS_AUTH_TOKEN_TTL_SECONDS=604800
 # MCP API key signing secret (optional; falls back to ANONYMOUS_AUTH_PRIVATE_KEY_PEM when unset)
 # MCP_API_KEY_SECRET=change-me
+# Force managed credentials regardless of deployment-mode defaults
+# EXECUTOR_ENFORCE_MANAGED_CREDENTIALS=1
 
 # ── Stripe Billing (optional — required for checkout/portal) ──
 # STRIPE_SECRET_KEY=sk_test_...
