--- a/executor/packages/database/package.json
+++ b/executor/packages/database/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@convex-dev/rate-limiter": "^0.3.2",
     "convex": "^1.31.7",
+    "convex-helpers": "^0.1.111",
     "sql.js": "^1.14.0"
   },
   "main": "./convex/_generated/api.js",
