Refactor tool catalog rebuild and source sync UX

--- a/package.json
+++ b/package.json
@@ -12,15 +12,6 @@
   "scripts": {
     "with-env": "bun run --env-file=.env --",
     "dev": "bun run dev.ts",
-    "kill:all": "bun run kill-all.ts",
-    "dev:sources": "bun run --cwd sources dev",
-    "sources:sync": "bun run --cwd sources sync",
-    "dev:executor:convex": "bunx --cwd executor convex dev",
-    "dev:executor:web": "bun run --cwd executor/apps/web dev",
-    "dev:executor:menubar": "bun run --cwd executor/apps/menubar dev",
-    "dev:executor:all": "bun run dev:executor:convex & bun run dev:executor:web",
-    "dev:assistant": "bun run --cwd assistant/packages/server dev",
-    "dev:bot": "bun run --cwd assistant/packages/bot dev",
     "test": "bun run test:executor && bun run test:assistant",
     "test:executor": "bun run --cwd executor test",
     "test:executor:integration": "bun run --cwd executor test:integration",
@@ -30,18 +21,10 @@
     "typecheck": "bun run typecheck:workspaces",
     "typecheck:slow": "bun run typecheck:workspaces:slow",
     "typecheck:workspaces": "bun run --filter \"@executor/*\" --filter \"@proto/sources\" --filter \"@assistant/*\" --filter \"@openassistant/reacord\" --if-present typecheck",
-    "typecheck:workspaces:slow": "bun run --filter \"@executor/*\" --filter \"@proto/sources\" --filter \"@assistant/*\" --filter \"@openassistant/reacord\" --if-present typecheck:slow",
-    "typecheck:executor": "bunx --package @typescript/native-preview tsgo --noEmit -p executor/tsconfig.json",
-    "typecheck:executor:slow": "bunx tsc --noEmit -p executor/tsconfig.json",
-    "typecheck:assistant": "bunx --package @typescript/native-preview tsgo --noEmit -p assistant/packages/server/tsconfig.json && bunx --package @typescript/native-preview tsgo --noEmit -p assistant/packages/bot/tsconfig.json",
-    "typecheck:assistant:slow": "bunx tsc --noEmit -p assistant/packages/server/tsconfig.json && bunx tsc --noEmit -p assistant/packages/bot/tsconfig.json",
     "clean": "bun run --filter '*' --if-present clean && rm -rf node_modules .turbo",
     "knip": "bunx knip --config knip.json",
     "db:clear:executor": "bun with-env bun run executor/scripts/dev/wipe/convex-db.ts",
-    "convex:codegen": "bunx --cwd executor convex codegen",
-    "smoke:storage:execute-flow:local": "bun with-env bun run --cwd executor smoke:storage:execute-flow:local",
-    "smoke:storage:execute-flow": "bun with-env bun run --cwd executor smoke:storage:execute-flow",
-    "smoke:storage:execute-flow:cloudflare": "bun with-env bun run --cwd executor smoke:storage:execute-flow:cloudflare"
+    "convex:codegen": "bunx --cwd executor convex codegen"
   },
   "dependencies": {
     "@apidevtools/swagger-parser": "^12.1.0",
