--- a/executor/apps/web/tsconfig.json
+++ b/executor/apps/web/tsconfig.json
@@ -30,8 +30,8 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "convex": ["../../node_modules/convex"],
-      "convex/*": ["../../node_modules/convex/*"]
+      "convex": ["../../../node_modules/convex"],
+      "convex/*": ["../../../node_modules/convex/*"]
     }
   }
 }
